Assets/CSS/index.css
body {
    /* copied from a website that generates CSS */
    background: #BEB154;
    background: -webkit-linear-gradient(right, #BEB154, #E54694);
    background: -moz-linear-gradient(right, #BEB154, #E54694);
    background: linear-gradient(to left, #BEB154, #E54694);
}

#container {
    border: solid black 2px;
    border-radius: 20px;
    background: white;
    margin: 100px auto;
    height: 525px;
    width: 360px;
}

h1 {
    background: black;
    color: white;
    padding: 10px;
    text-align: center;
    margin-top: 0;
    border-top-left-radius: 17px;
    border-top-right-radius: 17px;
}

p {
    padding-left: 10px;
}

form {
    padding-left: 10px;
}

select {
    margin-left: 10px;
}

#amountOfPeople {
    margin-left: 20px;
}

#tip {
    display: none;
}

#split {
    display: none;
}

#p {
    margin-left: 20px;
}

button {
    display: block;
    margin: 30px auto;
    border-radius: 3px;
    border-color: black;
    background: black;
    color: white;
    font-size: 15px;
}

button:hover {
    background: gray;
    color: black;
    cursor: pointer;
}

#tip {
    font-size: 40px;
    font-weight: bold;
    text-align: center;
}

#tip:before {
    content: "Total Tip";
    font-size: 30px;
    display: block;
}

